# HPCSE

./: CMakeLists.txt  README.md
Exercise1/: CMakeLists.txt  exercise1.cc
Exercise2/: CMakeLists.txt  barrier-test.cpp  barrier.h  diffusion-test-compare.cc  diffusion.cc  diffusion.h  exercise2-1.cc  exercise2-2.cc
Exercise3/: CMakeLists.txt  diffusion-test-compare.cc  diffusion_omp.cc  diffusion_omp.h  omp_playground.cc
Exercise4/: CMakeLists.txt  diffusion_steady.h  diffusion_steady_test.cc
Exercise5/: CMakeLists.txt  end.pbm  metropolis_sampling.h  metropolis_sampling_serial.cc  metropolis_sampling_test.cc  plotter.h  start.pbm
Exercise6/: CMakeLists.txt  diffusion-test.cc  diffusion_mpi.cc  diffusion_mpi.h  mpi_playground.cc
Exercise9/: CMakeLists.txt  LennardJones.h  README  main.cpp  simple_vectorization.cc  types.h
src/: source_ex1.cc
